- files.c:
  do_insertfile()
	- Properly handle filenames and executable commands that contain
	  nulls. (DLR)
  write_file()
	- Properly handle filenames that contain nulls. (DLR)
- nano.h:
	- Rename NANO_ALT_REPLACE_KEY to NANO_REPLACE_ALTKEY, for
	  consistency. (DLR)
	- Rename NANO_ALT_.* and NANO_.*ALTKEY to NANO_META_.* and
	  NANO_.*METAKEY, for consistency. (DLR)
- winio.c:
  parse_kbinput()
	- Add missing break. (DLR)
  edit_draw()
	- Fix potential warnings when assigning -1 to paintlen by using
	  if/else clauses instead of "?" operators. (DLR)
- configure.ac:
	- Reword several option descriptions, for clarity. (DLR)
- doc/faq.html:
	- Add miscellaneous wording and capitalization fixes. (DLR)
- BUGS:
	- Add miscellaneous cosmetic fixes. (DLR)

GNU nano 2.0.1 - 2006.11.20
- General:
	- Miscellaneous comment fixes. (DLR)
	- Fix copyright notices to not abbreviate the year list using a
	  range.  Changes to do_credits() and all source files. (DLR)
- files.c:
  get_full_path()
	- Remove unneeded assert. (DLR)
	- Fix problem where only paths would be returned when both paths
	  and filenames should have been. (DLR)
  do_writeout()
	- For consistency, when saving a file with no name, don't allow
	  overwriting an existing file when in restricted mode. (DLR)
	- Fix problem where a file could sometimes be overwritten
	  without a warning prompt. (DLR)
- text.c:
  do_spell()
	- When setting i to the return value of write_(marked_)?file(),
	  use the "?" operator instead of an if/else clause. (DLR)
- winio.c:
  do_replace_highlight()
	- Include the code to display zero-length matches even when
	  regex.h isn't found, as it can also be used to display
	  zero-length Unicode characters. (DLR)
- doc/rnano.1, doc/fr/rnano.1:
	- Add missing "(C)" to the copyright notice in the comments.
	  (DLR)
- doc/nano.texi:
	- Remove unneeded "." from the copyright notice in the comments.
	  (DLR)
- NEWS:
	- Add missing entries for nano 1.0.2 and 1.0.3, since 1.1.0