@@ -12,9 +12,15 @@ CVS code -
 	  consistency. (DLR)
 	- Rename NANO_ALT_.* and NANO_.*ALTKEY to NANO_META_.* and
 	  NANO_.*METAKEY, for consistency. (DLR)
+- text.c:
+  do_verbatim_input()
+	- Fix minor memory leak. (DLR)
 - winio.c:
   parse_kbinput()
 	- Add missing break. (DLR)
+	- Fix minor memory leak. (Itay Perl)
+  parse_verbatim_kbinput()
+	- Fix minor memory leak. (DLR)
   edit_draw()
 	- Fix potential warnings when assigning -1 to paintlen by using
 	  if/else clauses instead of "?" operators. (DLR)
